--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     "postdeploy": "bundle exec rake db:migrate pwb:db:seed"
   },
   "addons": [
-    "heroku-postgresql:free",
+    "heroku-postgresql:hobby",
     "cloudinary:starter"
   ],
   "env": {
