--- a/app.json
+++ b/app.json
@@ -9,8 +9,8 @@
     "proptech",
     "opensource"
   ],
-  "website": "http://propertywebbuilder.com/",
-  "repository": "https://github.com/etewiah/property_web_builder",
+  "website": "http://what3words.com/",
+  "repository": "https://github.com/blkluv/property_web_builder",
   "scripts": {
     "postdeploy": "bundle exec rake db:migrate pwb:db:seed"
   },
@@ -19,7 +19,7 @@
     "cloudinary:starter"
   ],
   "env": {
-    "GMAPS_API_KEY": "AIzaSyCjtlNZNiBqxzjTpHknuaTo-8XK96mTLuQ",
+    "GMAPS_API_KEY": "AIzaSyDO5Lt0YPGKbOxiUTpXZKwB7xbJIir_Tro",
     "LANG": "en_US.UTF-8",
     "RACK_ENV": "production",
     "RAILS_ENV": "production",
